# scriptai-agents

./: .env.example  .env.local  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
output/: report.md
src/: api.py  langgraph_workflow.py
src/config/: agents.yaml  tasks.yaml
src/crew_project/: api.py  crew.py  langgraph_workflow.py  main.py
src/crew_project/config/: agents.yaml  tasks.yaml
src/crew_project/models/: response_models.py
src/crew_project/nodes/: research.py
src/crew_project/services/: script_generation.py
src/crew_project/tools/: docx_read_tool.py  notion_tool_langgraph.py
src/crew_project/utils/: file_utils.py  prompt_builders.py
src/models/: response_models.py
src/nodes/: research.py  screenwrite.py
src/services/: script_generation.py
src/tools/: docx_read_tool_langgraph.py  notion_tool.py  notion_tool_langgraph.py
src/utils/: config_loader.py  file_utils.py  model_constants.py  task_manager.py  tool_registry.py
temp_docs/: script_6f47f2a4-fa9d-4d3d-8194-d8537ccfbedc.docx  script_9ef5b4e9-b5e6-42de-ad87-38d80a65f7d8.docx  script_c1ce0692-4ab8-4f1a-a97c-12b4433d27a5.docx  script_c5b2f70f-34bf-47d6-a0ae-911eee5ea66b.docx  script_d7dc5f5e-b425-4975-8c7e-527797b1ac5c.docx
template_scripts/: script-template-en.docx  short-script-en.docx
