[project]
name = "src"
version = "0.1.0"
description = "crew-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "docx2txt>=0.9",
    "langchain>=0.3.23",
    "langchain-tavily>=0.2.2",
    "langgraph>=0.4.8",
    "notion-client>=2.3.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "youtube-transcript-api>=1.0.3",
]

[project.scripts]
src = "src.main:run"
run_crew = "src.main:run"
train = "src.main:train"
replay = "src.main:replay"
test = "src.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"